tests/liquid/pos/operators/str.js

/*@ baz :: () => {v: string | v = "cat"} */
function baz(){
  var z = 'cat';
  return z;
}

