tests/liquid/neg/str0-unsafe.js

/*@ baz :: () => {v: string | v = "dog"} */
function baz(){
  var z = 'cat';
  return z;
}

